--- a/CSS/ueberuns.css
+++ b/CSS/ueberuns.css
@@ -1,55 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
 
-body {
-    background-image: url("../Images/Angebot_Background.svg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: start;
-    margin: 0;
-}
-
-
-
-.salut {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    width: 100%;
-    max-width: 600px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-.teaserBoxLinks {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
-    margin-right: 25%;
-    flex-direction: column;
-}
-
-.teaserBoxRechts {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: space-around;
-    margin-left: 25%;
-    flex-direction: column;
-}
-
-
-.teaserTextLinks {
-    align-self: flex-start;
-    text-align: left;
-}
-
-.teaserTextRechts {
-    align-self: flex-end;
-    text-align: right;
-}
-
-
 .menu-container {
     display: flex;
     justify-content: space-around;
@@ -63,6 +13,54 @@ body {
     flex: 1;
 }
 
+body {
+    background-image: url("../Images/Angebot_Background.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: start;
+    margin: 0;
+}
+
+main {
+    min-width: 650px;
+}
+
+.salut {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    width: 100%;
+    max-width: 600px;
+    margin-bottom: 50px;
+}
+
+.salutBoxLinks {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    margin-right: 25%;
+    flex-direction: column;
+}
+
+.salutBoxRechts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    margin-left: 25%;
+    flex-direction: column;
+}
+
+.salutTextLinks {
+    align-self: flex-start;
+    text-align: left;
+}
+
+.salutTextRechts {
+    align-self: flex-end;
+    text-align: right;
+}
 
 .team {
     display: flex;
@@ -73,22 +71,19 @@ body {
     gap: 10px;
 }
 
+.containerPortrait {
+    position: relative;
+    width: 30%;
+    min-width: 300px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
 .bildPortrait {
     width: 100%;
     height: auto;
     border-radius: 50%;
     margin-bottom: 20px;
-}
-
-.containerPortrait {
-    position: relative;
-    width: 30%;
-    min-width: 200px;
-    border-radius: 50%;
-}
-
-.containerPortrait:hover .overlay {
-    opacity: 1;
 }
 
 .overlay {
@@ -107,6 +102,10 @@ body {
     overflow: hidden;
 }
 
+.containerPortrait:hover .overlay {
+    opacity: 1;
+}
+
 .portraitText {
     color: black;
     position: absolute;
@@ -116,6 +115,7 @@ body {
     -ms-transform: translate(-50%, -50%);
     border-radius: 50%;
     width: 80%;
+    max-width: 100%;
     height: 100%;
     text-align: center;
     display: flex;
@@ -131,20 +131,18 @@ body {
 }
 
 .portraitFunction {
-    font-size: 0.7em;
+    font-size: 0.8em;
     font-weight: bold;
-
 }
 
 .portraitDescription {
-    font-size: 0.7em;
+    font-size: 0.8em;
     margin: 0;
     padding: 0;
 }
 
 .textTeam {
     align-self: flex-start;
-    padding-left: 50px;
     width: 50%;
     min-width: 300px;
 }
@@ -164,7 +162,7 @@ body {
 
 .placeholder {
     width: 100%;
-    height: 150px;
+    height: 100px;
 }
 
 .visionBox {
@@ -187,7 +185,6 @@ body {
     width: 100%;
 }
 
-
 .kontaktTextBox {
     display: flex;
     flex-direction: column;
@@ -197,7 +194,7 @@ body {
 }
 
 .kontaktText {
-    width: 80%;
+    width: 70%;
 }
 
 .paragraphKontaktText {
@@ -205,16 +202,12 @@ body {
     font-size: 22px;
     font-weight: 400;
     color: black;
-    margin-top: 10px;
-    margin-bottom: 10px;
     text-align: start;
 }
 
 #adresseBox {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    ;
     margin-top: 50px;
     align-self: flex-end;
 }
@@ -228,7 +221,7 @@ body {
 
 @media screen and (max-width:820px) {
 
-   .containerPortrait:checked .overlay {
+    .containerPortrait:checked .overlay {
         opacity: 1;
     }
 
@@ -241,6 +234,10 @@ body {
         padding-left: 0px;
         min-width: 300px;
     }
+
+    main {
+        min-width: 0px;
+    }
 }
 
 @media screen and (max-width:450px) {
@@ -252,5 +249,13 @@ body {
 
     .containerPortrait input:checked~.overlay {
         opacity: 1;
+    }
+
+    .containerPortrait {
+        width: 80%;
+    }
+
+    main {
+        min-width: 0px;
     }
 }
